Rutas y upload de archivos para las portadas (covers en client)
