# src/routes/upload.routes.ts
@@ -1,0 +1,7 @@
+import { Elysia } from 'elysia';
+import { uploadController } from '../controllers/upload.controller';
+
+const uploadRoutes = new Elysia()
+  .post('/upload/cover', uploadController.cover);
+
+export default uploadRoutes;
